tests/compile_failures/attributes/duplicate_declarations.stderr
error[E0124]: field `hidden` is already declared
 --> tests/compile_failures/attributes/duplicate_declarations.rs:3:1
  |
3 | #[attributes(href, hidden, disabled)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ field already declared
4 | struct Sut {
5 |     hidden: bool,
  |     ------------ `hidden` first declared here
  |
  = note: this error originates in the attribute macro `attributes` (in Nightly builds, run with -Z macro-backtrace for more info)
